blog: rewrite posts in a simpler and more direct style
Co-Authored-By: Albert Giró Quer <albert.giro@outlook.com>